[package]
name = "kitty"
version = "0.8.0"
authors = ["Adrian Borup <adrian@borup.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
platform-dirs = "0.3"
rust-ini = "0.18"
secrecy = "0.8"
yaml-rust = "0.4"
indoc = "2"

[dev-dependencies]
dockertest = "0.3"
bollard = "0.13"
futures-util = "0.3.26"
strip-ansi-escapes = "0.1"
dotenv = "0.15"
