[package]
name = "kitty"
version = "0.8.0"
authors = ["Adrian Borup <adrian@borup.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
platform-dirs = "0.3"
rust-ini = "0.18"
secrecy = "0.8"
yaml-rust = "0.4"
indoc = "2"
reqwest = { version = "0.11", features = ["multipart", "cookies", "json"] }
tokio = { version = "1.25", features = ["full"] }
regex = "1.7"
colored = "2.0"
tempfile = "3"
zip = "0.6"
shlex = "1.1"
notify = "5.1"
webbrowser = "0.8"
serde = { version = "1", features = ["derive"] }
scraper = "0.14"
selectors = "0.22"

[dev-dependencies]
dockertest = "0.3"
bollard = "0.13"
futures-util = "0.3"
strip-ansi-escapes = "0.1"
dotenv = "0.15"
serial_test = "1.0"
