[package]
name = "kitty"
version = "0.9.0"
authors = ["Adrian Borup <adrian@borup.com>"]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
platform-dirs = "0.3"
rust-ini = "0.21"
secrecy = "0.8"
yaml-rust = "0.4"
indoc = "2"
reqwest = { version = "0.12", features = ["multipart", "cookies", "json"] }
tokio = { version = "1.25", features = ["full"] }
regex = "1.7"
colored = "2.0"
tempfile = "3"
zip = "2.2"
shlex = "1.1"
notify = "6.1"
webbrowser = "1.0"
serde = { version = "1", features = ["derive"] }
scraper = "0.20"
self_update = "0.41"
dialoguer = "0.11"

[dev-dependencies]
dockertest = "0.3"
bollard = "0.13"
futures-util = "0.3"
strip-ansi-escapes = "0.1"
dotenv = "0.15"
serial_test = "1.0"
